src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Product Brand Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air-Cooled Chillers</fullName>
                </value>
                <value>
                    <fullName>Air Handlers</fullName>
                </value>
                <value>
                    <fullName>Package Rooftop</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Chiller AC - Scroll</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Misc. Item</fullName>
                </value>
                <value>
                    <fullName>Light Commercial</fullName>
                </value>
                <value>
                    <fullName>Room Air</fullName>
                </value>
                <value>
                    <fullName>VRV</fullName>
                </value>
                <value>
                    <fullName>Mini Split - CO - IU</fullName>
                </value>
                <value>
                    <fullName>Mini Split - CO</fullName>
                </value>
                <value>
                    <fullName>Mini Split - HP - IU</fullName>
                </value>
                <value>
                    <fullName>Mini Split - HP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Only Active Formats is available for FPA and SFO Selection</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCL_Number_s__c</fullName>
        <label>PCL Number(s)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCL__c</fullName>
        <inlineHelpText>Please contact saleforcehelp@daikinapplied.com  to add PCL Numbers</inlineHelpText>
        <label>PCL Number(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                </value>
                <value>
                    <fullName>0002</fullName>
                </value>
                <value>
                    <fullName>0003</fullName>
                </value>
                <value>
                    <fullName>0004</fullName>
                </value>
                <value>
                    <fullName>0005</fullName>
                </value>
                <value>
                    <fullName>0006</fullName>
                </value>
                <value>
                    <fullName>0007</fullName>
                </value>
                <value>
                    <fullName>0008</fullName>
                </value>
                <value>
                    <fullName>0009</fullName>
                </value>
                <value>
                    <fullName>0010</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockKeepingUnit__c</fullName>
        <label>Product SKU</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>Format</label>
    <listViews>
        <fullName>Active_Formats</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>PCL__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Formats</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>PCL__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>InActive_Formats</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>PCL__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>InActive Formats</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Format Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>